--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
