--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hasansattar.co.uk",
+  "name": "hasansattar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.1",
-    "clsx": "^2.1.0",
-    "framer-motion": "^10.16.16",
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.0"
+    "@vercel/analytics": "^1.1.3",
+    "framer-motion": "^11.0.3",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "@types/tailwindcss": "^3.1.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
